--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,34 @@
     <string name="SiteFilter">Site filter</string>
     <string name="EnterSite">Enter Site</string>
     <string name="Done">Done</string>
+    <string name="text_image_size">Pick an Image Size</string>
+        <string name="text_color_filter">Pick a Color</string>
+            <string name="text_image_type">Pick an Image Type</string>
+   	<string-array name="image_size">
+        <item>small</item>
+        <item>medium</item>
+        <item>large</item>
+        <item>xlarge</item>
+    </string-array>
+       	<string-array name="color_filter">
+        <item>black</item>
+        <item>blue</item>
+        <item>brown</item>
+        <item>gray</item>
+        <item>green</item>
+        <item>orange</item>
+        <item>pink</item>
+        <item>purple</item>
+        <item>red</item>
+        <item>teal</item>
+        <item>white</item>
+        <item>yellow</item>
+    </string-array>
+       	<string-array name="image_type">
+        <item>face</item>
+        <item>photo</item>
+        <item>clipart</item>
+        <item>lineart</item>
+    </string-array>
 
 </resources>
