--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,5 +44,6 @@
         <item>clipart</item>
         <item>lineart</item>
     </string-array>
+        <string name="LoadMore">Load More Images</string>
 
 </resources>
